# audioout

./: .gitignore  Makefile  README.md  client.py  meta.json  pyproject.toml  requirements.txt  run.sh  setup.sh
src/: main.py
src/audioout/: __init__.py  api.py  audioout_pygame.py
src/audioout/proto/: audioout_grpc.py  audioout_pb2.py  buf.gen.yaml
src/proto/: audioout.proto  audioout_grpc.py  audioout_pb2.py  audioout_pb2.pyi
